--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
         <h2>{{ post.title }}</h2>
         <p><em>Written by {{ post.author }}</em></p>
         <p>{{ post.content }}</p>
+        <p><a href="{{ url_for('delete', post_id=post.id) }}" onclick="return confirm('Delete this post?')">Delete</a></p>
     </div>
     {% else %}
     <p>No posts yet.</p>
